# in-your-eyes

./: Cargo.toml  Makefile  README.md  build.rs
extra/macos/in-your-eyes.app/Contents/: Info.plist
extra/macos/in-your-eyes.app/Contents/Resources/: in-your-eyes.icns
src/: app.rs  brightness_services.rs  components.rs  gamma_color.rs  gamma_control.rs  main.rs  monitor.rs  ns_number.rs  utils.rs
